--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="main">
+   <div id="main">
      <div id="page1">
         <div id="nav">
             <h4>Cynthia Ugwu</h4>
@@ -53,9 +53,23 @@
             </div>
         </div>
       </div>
-     </div> 
+    </div>
+      
      <div id="page2">
-        
+        <div class="elem">
+            <h2>The plug</h2>
+            <h5>2022</h5>
+        </div>
+        <div class="elem">
+            <h2>ixperience</h2>
+            <h5>2022</h5>
+        </div>
+        <div class="elem">
+            <h2>hudu</h2>
+            <h5>2022</h5>
+        </div>
+        <div class="elemlast"></div>
+        </div>
      </div>      
     </div>
 </body>
