smooth scrolling added

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="loco.css">
     <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"
     rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <div id="main">
+ <div id="main">
      <div id="page1">
         <div id="nav">
             <h4>Cynthia Ugwu</h4>
@@ -73,7 +74,7 @@
         </div>
         <div class="elemlast"></div>
         </div>
-     </div>
+    
      <div id="aboutt">
             <div id="imgdiv">
               <img src="./cynthia.png" alt="">
@@ -108,7 +109,8 @@
             </div>
 
         </div>
-     </div>      
-    </div>
+ </div>
+ <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.js"></script>
+ <script src="script.js"></script>
 </body>
 </html>
